Tests/Conformance/Generated/Builtin/Constant/Value/Underflow.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Value.Underflow

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_value_underflow "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/value/underflow/underflow.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Value.Underflow
